# narrative-graph

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: config.yaml
data/: sample.jsonl  sample_large.jsonl
docs/: README.md  api-reference.md  architecture.md  commands.md  configuration.md  coordination-detection.md  data-pipeline.md  graph-model.md  risk-engine.md
src/narrative_graph/: __init__.py  config.py  logging.py
src/narrative_graph/api/: __init__.py  main.py  routes.py
src/narrative_graph/cli/: __init__.py  commands.py
src/narrative_graph/coordination/: __init__.py  detector.py  evidence.py
src/narrative_graph/explain/: __init__.py  fallback.py  llm.py
src/narrative_graph/features/: __init__.py  entities.py  extractors.py  text.py
src/narrative_graph/graph/: __init__.py  builder.py  connection.py  export.py  metrics.py  queries.py
src/narrative_graph/ingestion/: __init__.py  loaders.py  normalizer.py  schemas.py
src/narrative_graph/narratives/: __init__.py  clustering.py  embeddings.py  keywords.py
src/narrative_graph/risk/: __init__.py  components.py  engine.py
src/narrative_graph/storage/: __init__.py  database.py  manifest.py  parquet.py
src/narrative_graph/ui/: app.py
tests/: __init__.py  conftest.py  test_clustering.py  test_graph.py  test_ingestion.py  test_scoring.py
